--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
             <version>1.13.7</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.insert-koin</groupId>
+            <artifactId>koin-core-jvm</artifactId>
+            <version>3.1.6</version>
+        </dependency>
     </dependencies>
 
 </project>
